pages/style.css
@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");

h2,
.h2 {
  font-family: "Barlow";
  font-weight: 800;
  font-size: 48px;
  line-height: 64px;
  color: #1c252e;
}

h3,
.h3 {
  font-family: "Barlow";
  font-weight: 700;
  font-size: 32px;
  line-height: 48px;
  color: #1c252e;
}

h4,
.h4 {
  font-family: "Barlow";
  font-weight: 600;
  font-size: 24px;
  line-height: 36px;
  color: black;
}

h5,
.h5 {
  font-family: "Barlow";
  font-weight: 600;
  font-size: 20px;
  line-height: 30px;
  color: #1c252e;
}

h6,
.h6 {
  font-family: "Barlow";
  font-weight: 600;
  font-size: 18px;
  line-height: 28px;
  color: #1c252e;
}

.body1 {
  font-family: "Public Sans";
  font-size: 16px;
  color: #637381;
}

.body2 {
  font-family: "Public Sans";
  font-size: 14px;
  color: #637381;
}

.subtitle2 {
  font-family: "Public Sans";
  font-weight: 600;
  font-size: 14px;
  color: #1c252e;
}

.caption {
  font-family: "Public Sans";
  font-weight: 400;
  font-size: 16px;
  line-height: 18px;
  color: #1c252e;
}

.button {
  text-decoration: none;
  border: none;
  font-family: "Public Sans";
  font-weight: 700;
  font-size: 15px;
  line-height: 26px;
  text-decoration: none;
  padding: 16px;
  border-radius: 8px;
}

.line-clamp-2 {
  width: 100%;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  overflow: hidden;
}

.primary {
  background-color: #fa541c;
  color: white;
}
.primary:hover {
  background-color: #d53f00;
  color: white;
}

.inherit {
  color: white;
  background-color: #1c252e;
}
.inherit:hover {
  color: white;
  background-color: #13181d;
  cursor: pointer;
}

.paper {
  box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.24);
  box-shadow: 0px 0px 2px 0px rgba(145, 158, 171, 0.4);
  padding: 24px;
  border-radius: 12px;
}

.subscribe-container {
  display: flex;
  width: 600px; /* adjust as needed */
  background: #fff;
  border-radius: 20px;
  overflow: hidden;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
}

.subscribe-container input {
  flex: 1;
  border: none;
  padding: 16px 20px;
  font-size: 20px;
  color: #7b8794;
}

.subscribe-container input:focus-visible {
  outline: none;
  border: none;
}

.subscribe-container button {
  background-color: #fa4b00;
  color: white;
  border: 4px solid white;
  padding: 0px 40px;
  font-size: 24px;
  font-weight: bold;
  cursor: pointer;
  border-radius: 20px;
  transition: background-color 0.3s;
}

.subscribe-container button:hover {
  background-color: #d53f00;
}

/* Tablet Styles */
@media screen and (max-width: 1200px) {
  h2 {
    font-size: 36px;
  }
  .subscribe-container {
    width: 475px;
  }
  .subscribe-container input {
    font-size: 16px;
  }
  .subscribe-container button {
    font-size: 20px;
  }
}

/* Mobile Styles */
@media screen and (max-width: 500px) {
  h2 {
    font-size: 32px;
  }
  .body1 {
    font-size: 12px;
  }
  .subscribe-container {
    width: unset;
    border-radius: 8px;
  }
  .subscribe-container button {
    font-size: 16px;
    padding: 4px 40px;
    border-radius: 12px;
  }
  .subscribe-container input {
    padding: 0px 40px;
    font-size: 12px;
  }
}

